update custom trip in payment panel